Version 0.7.0 (2008-05-04):

	* Adding multithreading capability to the chemgps daemon (cgpsd). A
	  variant of the boss/worker model is implemented, where the pool of
	  running threads grows dynamic. Incoming connections are accepted and 
	  put on hold until a free worker thread becomes available.

	* The client (cgpsclt) does retry on connection failure.
	
	* Added check for Simca Q installation in the configure script.
	
	* Fixed memory leaks and memory corruption problems found by valgrind. It's 
	  still problem running simultanous predict (it seems like these stems from
	  GNU libstdc++, Simca Q or Boost not being completly thread safe).
	  
Version 0.6.2 (2008-04-25):

	* The libchemgps library is now automatic detected from the configure script.
	
	* Added the distributed DOS attack utility (cgpsddos), use it only for
	  testing threading and throughput.
	
Version 0.6.1 (2008-04-09):

	* Added configure option for disable debug output and enable
	  building the client without dependencies of libchemgps (and libsimcaq).
	  
	* Manual pages for cgpsclt(1), cgpsstd(1) and cgpsd(8) has been added.

Version 0.6.0 (2008-04-09):

	* Split the code into two packages: applications (this package) and
          a library part (libchemgps).
	  
	* Fixed chemgps-sqp2 to provide both client/server (cgpsd/cgpsclt) and 
	  standalone application functionality (cgpsstd).
	  
*** Historical notes from chemgps-sqp (the standalone only version):

Version 0.5.2 (2008-03-03):

	* Modified code to reorder quantitative input data against the
	  variable order in the project if input data contains a descriptor
	  header. This also filters unused varibles from input data.
	  
	* Adding batch job mode. This mode suppress info messages from
	  Simca-QP and warnings messages caused by batch queue command pipe.

Version 0.5.1 (2008-02-19):

	* Changed output to be less verbose (stripping result headers). The
	  old behavour is restored by using the --verbose option.
	  